// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verify validateFormWithMongoQuery: Correctly parse arrayQueryOperator 1`] = `
Object {
  "myNum": Object {
    "$in": Array [
      54,
      123,
      432,
      1543,
      132,
    ],
  },
}
`;

exports[`Verify validateFormWithMongoQuery: Correctly parse arrayedOperators 1`] = `
Object {
  "$or": Array [
    Object {
      "myNum": Object {
        "$gte": 234,
      },
    },
    Object {
      "myNum": Object {
        "$in": Array [
          54,
          123,
          432,
          1543,
          5432,
        ],
      },
    },
  ],
}
`;

exports[`Verify validateFormWithMongoQuery: Correctly parse arrayedOperators with $sort 1`] = `
Object {
  "$limit": 20,
  "$or": Array [
    Object {
      "myNum": Object {
        "$gte": 234,
      },
    },
    Object {
      "myNum": Object {
        "$in": Array [
          54,
          123,
          432,
          1543,
          5432,
        ],
      },
    },
  ],
  "$skip": 10,
  "$sort": Object {
    "myNum": -1,
  },
}
`;

exports[`Verify validateFormWithMongoQuery: Correctly parse sameTypeOperator 1`] = `
Object {
  "myNum": Object {
    "$gte": 234,
  },
}
`;

exports[`Verify validateFormWithMongoQuery: Correctly reject invalid arrayedOperators 1`] = `
Object {
  "errors": Array [
    Object {
      "type": 3,
    },
  ],
  "mapTo": "any",
}
`;

exports[`Verify validateFormWithMongoQuery: Reject empty special qury 1`] = `"empty query"`;

exports[`Verify validateFormWithMongoQuery: Reject faulty $sort 1`] = `
Object {
  "errors": Array [
    Object {
      "type": 3,
    },
  ],
  "mapTo": "$sort",
}
`;

exports[`Verify validateFormWithMongoQuery: Resolve null if nothing suiting found 1`] = `null`;

exports[`Verify validateFormWithMongoQuery: Successfully Validate Number Object 1`] = `
Object {
  "myNum": 432,
}
`;

exports[`Verify validateFormWithMongoQuery: Throw error on arrayQueryOperator if one of the types does not match 1`] = `
Object {
  "errors": Array [
    Object {
      "type": 3,
    },
  ],
  "mapTo": "any",
}
`;

exports[`Verify validateFormWithMongoQuery: Throw error on sameTypeOperator if types do not match 1`] = `
Object {
  "errors": Array [
    Object {
      "type": 3,
    },
  ],
  "mapTo": "myNum",
}
`;

exports[`Verify validateFormWithMongoQuery: dont parse update operator 1`] = `Object {}`;
